chore: add spotless config for auth-service